this is the message

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Danielle's home page!</title>
 </head>
 <body>
-    <p>Here is the best page ever!</p>
+    <p>
+        <background-colo>PLACES</background-colo>
+    </p>
 </body>
 </html>
